--- a/nginx.conf
+++ b/nginx.conf
@@ -57,6 +57,10 @@ http {
             proxy_pass http://backend;
         }
 
+        location /web/ {
+            proxy_pass http://backend;
+        }
+
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
